People animations kinda complete? Finish path opacity and then move to prez

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -9,7 +9,7 @@ $munchingOrange: #f1c232;
   justify-content: center;
 }
 
-.next-button {
+// .next-button {
   // // Sets to white
   // color: white;
   // font-size: 4rem;
@@ -32,4 +32,4 @@ $munchingOrange: #f1c232;
   //   background: #2b2b2b;
   //   color: white;
   // }
-}
+// }
